// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationDisabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <select
      disabled=""
      style="margin-right: 20px; height: 32px;"
    >
      <option
        value="5"
      >
        5
      </option>
      <option
        value="10"
      >
        10
      </option>
      <option
        value="20"
      >
        20
      </option>
      <option
        value="50"
      >
        50
      </option>
    </select>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current t-is-disabled"
      >
        1
      </li>
      <li
        class="t-pagination__number t-is-disabled"
      >
        2
      </li>
      <li
        class="t-pagination__number t-is-disabled"
      >
        3
      </li>
      <li
        class="t-pagination__number t-is-disabled"
      >
        4
      </li>
      <li
        class="t-pagination__number t-is-disabled"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more t-is-disabled"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number t-is-disabled"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
    <div
      class="t-pagination__jump"
    >
      跳转
      <div
        class="t-input t-is-disabled"
      >
        <input
          class="t-input__inner"
          disabled=""
        />
      </div>
      页
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaginationFew.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaginationGoto.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        33
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
    <div
      class="t-pagination__jump"
    >
      跳转
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
        />
      </div>
      页
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaginationLarge.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaginationSelect.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <select
      style="margin-right: 20px; height: 32px;"
    >
      <option
        value="20"
      >
        20
      </option>
      <option
        value="30"
      >
        30
      </option>
      <option
        value="100"
      >
        100
      </option>
      <option
        value="200"
      >
        200
      </option>
    </select>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        33
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaginationSimple.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        value="1"
      />
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaginationSize.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination t-size-s"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaginationTotal.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 685 项数据
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        46
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
  <br />
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      <span>
        共 685 项数据 1 - 15
      </span>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-arrow-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        46
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-arrow-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;
